k8s/deployment.yml
cat > k8s/deployment.yml << 'EOF'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: nginxcc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: pratikshashete/nginx-app:v1
        ports:
        - containerPort: 80
EOF
